--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -15,6 +15,7 @@
             <TnTSideNavListItem Icon="settings" Label="Forms" Href="forms" />
             <TnTSideNavListItem Icon="warning" Label="Upload File" Href="upload" />
             <TnTSideNavListItem Icon="error" Label="Progress Indicators" Href="progress" />
+            <TnTSideNavListItem Icon="phone" Label="Tab View" Href="tabview" />
         </TnTSideNavList>
     </SideNav>
 
