--- a/TnTComponents/TnTButton.razor
+++ b/TnTComponents/TnTButton.razor
@@ -19,5 +19,5 @@
         @TnTIconComponent.RenderIcon(IconType, EndIcon, "tnt-button-end-icon")
     }
 </button>
-<TnTPageScript Src="./_content/TnTComponents/TnTButton.razor.js?tntbutton" />
+<TnTPageScript Src="@($"./_content/TnTComponents/TnTButton.razor.js?class={Class}")" />
 
