--- a/TnTComponents/Styles/Common/_common.scss
+++ b/TnTComponents/Styles/Common/_common.scss
@@ -269,7 +269,7 @@ $tnt-color-on-info-container: var(--tnt-color-on-info-container);
     overflow: hidden;
 
     span.tnt-ripple {
-        position: absolute; /* The absolute position we mentioned earlier */
+        position: absolute; 
         border-radius: 50%;
         transform: scale(0);
         animation: ripple-animation 600ms linear;
