--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -1,7 +1,10 @@
 ﻿@import 'Common/_common.scss';
 
 html, body {
+    color: $tnt-color-on-background;
     background-color: $tnt-color-background;
+    margin: 0;
+    overflow-x: hidden;
 }
 
 * {
@@ -19,3 +22,4 @@ h1, h2, h3, h4, h5, h6 {
 @import 'Components/_divider.scss';
 @import 'Components/_form.scss';
 @import 'Components/_progress.scss';
+@import 'Components/_tabview.scss';
