--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -17,6 +17,7 @@ h1, h2, h3, h4, h5, h6 {
 
 @import 'Common/_default_typeography.scss';
 @import 'Common/_layout.scss';
+@import 'Components/_accordion.scss';
 @import 'Components/_buttons.scss';
 @import 'Components/_card.scss';
 @import 'Components/_divider.scss';
