minor style changes

--- a/TnTComponents/Styles/variables.scss
+++ b/TnTComponents/Styles/variables.scss
@@ -134,7 +134,7 @@
     --tnt-color-on-background-light: #1d1b20;
     --tnt-color-surface-light: #fef7ff;
     --tnt-color-on-surface-light: #1d1b20;
-    --tnt-color-surface-variant-light: #1d1b20;
+    --tnt-color-surface-variant-light: #e8e0eb;
     --tnt-color-on-surface-variant-light: #49454f;
     --tnt-color-surface-container-highest-light: var(--tnt-color-neutral90);
     --tnt-color-surface-container-high-light: var(--tnt-color-neutral92);
