Fixed build error

--- a/TnTComponents/Forms/TnTRadioButton.razor
+++ b/TnTComponents/Forms/TnTRadioButton.razor
@@ -9,7 +9,7 @@
                    aria-label="@AriaLabel"
                    type="radio"
                    class="@GetClass()"
-                   name="@_radioGroup.Name"
+                   name="@_radioGroup.GroupName"
                    style="@Style"
                    title="@Title"
                    disabled="@Disabled"
