Removing old stuff

--- a/TnTComponents/Common/TnTExternalClickHandler.razor
+++ b/TnTComponents/Common/TnTExternalClickHandler.razor
@@ -1,5 +1,6 @@
-﻿@implements IDisposable
+﻿@*@implements IDisposable
 @inherits TnTBaseComponent
 <div @ref="_externalClickElement" class="@GetCssClass()">
     @ChildContent
 </div>
+*@
