--- a/TnTComponents/Dialogs/TnTDialogContainer.razor
+++ b/TnTComponents/Dialogs/TnTDialogContainer.razor
@@ -1,4 +1,4 @@
-﻿@inherits TnTBaseComponent
+﻿@*@inherits TnTBaseComponent
 @inject TnTDialogService DialogService;
 
 <div class="@GetCssClass()" theme="@Theme">
@@ -13,3 +13,4 @@
 
 </div>
 
+*@
