--- a/TnTComponents/Forms/TnTRadioButton.razor
+++ b/TnTComponents/Forms/TnTRadioButton.razor
@@ -1,4 +1,4 @@
-﻿@inherits TnTComponentBase
+﻿@*@inherits TnTComponentBase
 @typeparam TInputType
 
 <label class="@LabelClass">
@@ -26,4 +26,4 @@
     @if (!string.IsNullOrWhiteSpace(SupportingText)) {
         <span class="@SupportingTextClass">@SupportingText</span>
     }
-</label>
+</label>*@
