--- a/TnTComponents/Forms/TnTRadioGroup.razor
+++ b/TnTComponents/Forms/TnTRadioGroup.razor
@@ -1,4 +1,4 @@
-﻿@typeparam TInputType
+﻿@*@typeparam TInputType
 @inherits TnTInputBase<TInputType>
 
 <CascadingValue Value="this" IsFixed="true">
@@ -16,4 +16,4 @@
             <ValidationMessage class="@ValidationClass" For="ValueExpression" />
         }
     </div>
-</CascadingValue>
+</CascadingValue>*@
