--- a/TnTComponents/Grid/TnTGrid.razor
+++ b/TnTComponents/Grid/TnTGrid.razor
@@ -1,4 +1,4 @@
-﻿@using Microsoft.AspNetCore.Components.Rendering
+﻿@*@using Microsoft.AspNetCore.Components.Rendering
 @using global::TnTComponents.Infrastructure
 @inherits TnTBaseComponent
 @typeparam TGridItem
@@ -75,3 +75,4 @@
     }
 
 }
+*@
