--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -16,7 +16,7 @@
             <TnTSideNavListItem Icon="warning" Label="Upload File" Href="upload" />
             <TnTSideNavListItem Icon="error" Label="Progress Indicators" Href="progress" />
             <TnTSideNavListItem Icon="phone" Label="Tab View" Href="tabview" />
-            <TnTSideNavListItem Icon="plane" Label="Tab View" Href="accordion" />
+            <TnTSideNavListItem Icon="app" Label="Accordion" Href="accordion" />
         </TnTSideNavList>
     </SideNav>
 
