--- a/TnTComponents/Grid/TnTColumnBase.razor
+++ b/TnTComponents/Grid/TnTColumnBase.razor
@@ -1,4 +1,4 @@
-﻿@using Microsoft.AspNetCore.Components.Rendering
+﻿@*@using Microsoft.AspNetCore.Components.Rendering
 @using global::TnTComponents.Infrastructure
 @inherits TnTIconComponent
 @implements IDisposable
@@ -19,3 +19,4 @@
         }
     }
 }
+*@
