--- a/LiveTest/LiveTest.Client/_Imports.razor
+++ b/LiveTest/LiveTest.Client/_Imports.razor
@@ -7,3 +7,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using LiveTest.Client
+@using TnTComponents.Forms
+
