--- a/TnTComponents/Forms/TnTRadioGroup.razor
+++ b/TnTComponents/Forms/TnTRadioGroup.razor
@@ -1,7 +1,7 @@
-﻿@*@typeparam TInputType
+﻿@typeparam TInputType
 @inherits TnTInputBase<TInputType>
 
-<CascadingValue Value="this" IsFixed="true">
+<CascadingValue Value="_context" IsFixed="false">
     <div @attributes="AdditionalAttributes" class="@GetClass()" style="@Style" theme="@Theme">
         @if (!string.IsNullOrWhiteSpace(Label)) {
             <span class="@LabelTextClass">
@@ -16,4 +16,4 @@
             <ValidationMessage class="@ValidationClass" For="ValueExpression" />
         }
     </div>
-</CascadingValue>*@
+</CascadingValue>
