Stubbing out data grid

--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -17,6 +17,7 @@
             <TnTSideNavListItem Icon="error" Label="Progress Indicators" Href="progress" />
             <TnTSideNavListItem Icon="phone" Label="Tab View" Href="tabview" />
             <TnTSideNavListItem Icon="app" Label="Accordion" Href="accordion" />
+            <TnTSideNavListItem Icon="calendar" Label="DataGrid" Href="datagrid" />
         </TnTSideNavList>
     </SideNav>
 
