--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -16,6 +16,7 @@ html, body {
 @import 'Components/_accordion.scss';
 @import 'Components/_buttons.scss';
 @import 'Components/_card.scss';
+@import 'Components/_datagrid.scss';
 @import 'Components/_divider.scss';
 @import 'Components/_form.scss';
 @import 'Components/_progress.scss';
