--- a/LiveTest/LiveTest.Client/Pages/DataGrid.razor
+++ b/LiveTest/LiveTest.Client/Pages/DataGrid.razor
@@ -6,7 +6,12 @@
 <h3>
     Static
 </h3>
+<DataGridComponent Name="Static" />
 <h3>
     Interactive
 </h3>
-<DataGridComponent @rendermode="@RenderMode.InteractiveAuto" />
+
+@if (false) {
+
+    <DataGridComponent Name="Interactive" @rendermode="@RenderMode.InteractiveAuto" />
+}
