--- a/TnTComponents/Styles/Components/_datagrid.scss
+++ b/TnTComponents/Styles/Components/_datagrid.scss
@@ -23,9 +23,21 @@
                     position: relative;
                     user-select: none;
                     min-width: 16px;
+                    text-align: center;
+                    @extend .title-medium;
 
-                    @extend .title-large;
+                    a {
+                        display: block;
+                        width: 100%;
+                        height: 100%;
+                        color: inherit;
+                        text-decoration: none;
+                        transition: 150ms;
+                    }
 
+                    i {
+                        color: inherit;
+                    }
 
                     .tnt-resizeable {
                         position: absolute;
@@ -42,18 +54,30 @@
                     }
 
                     &.tnt-sortable {
+                        &:has(a.active) {
+                            color: $tnt-color-secondary;
+                        }
+
                         &:hover {
                             color: $tnt-color-primary;
                         }
 
-                        @include enable-ripple($tnt-color-primary);
+                        a {
+                            i {
+                                position: absolute;
+                                right: 8px;
+                                user-select: none;
+                                pointer-events: none;
+                            }
 
-                        i {
-                            position: absolute;
-                            right: 8px;
-                            user-select: none;
-                            pointer-events: none;
+                            &.ascending {
+                                i {
+                                    transform: rotateZ(180deg);
+                                }
+                            }
                         }
+
+                        @include enable-ripple($tnt-color-primary);
                     }
                 }
             }
@@ -65,6 +89,7 @@
                     padding: 8px;
                     min-width: 16px;
                     white-space: nowrap;
+                    @extend .body-medium;
                 }
             }
         }
